<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/chatColor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/tv_login_in"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/tv_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:autoLink="all"
            android:padding="10dp"
            android:text="@string/tv_register"
            android:textColor="@color/white" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/user" />

            <EditText
                android:id="@+id/et_login_loginNum"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:hint="@string/et_hint_login_in"
                android:textSize="16sp" />

        </RelativeLayout>

        <View style="@style/DivisionLine" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@drawable/password" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_marginEnd="40dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="40dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="2dp"
                android:background="@null"
                android:hint="@string/et_hint_password"
                android:inputType="textPassword"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_rectangle_button_blue"
        android:text="@string/tv_login_in"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp">

        <CheckBox
            android:id="@+id/cb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:paddingEnd="0dp"
            android:paddingLeft="6dp"
            android:paddingRight="0dp"
            android:paddingStart="6dp"
            android:text="@string/tv_remember_password"
            android:textColor="#999999"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_no_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:padding="10dp"
            android:text="@string/tv_skip"
            android:textColor="#666666"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#ABC" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/white"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/tv_third_login_in"
                android:textSize="14sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">
            <Button
                android:id="@+id/bt_login_qq"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/login_qq" />
            <Button
                android:id="@+id/bt_login_weiBo"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/login_weibo" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
