<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ChatActivity">

    <android.support.v7.widget.Toolbar
       android:id="@+id/chat_toolbar"
       android:layout_height="50dp"
       android:layout_width="match_parent"
       android:background="@color/chatColor">

        <ImageView
            android:id="@+id/iv_chat_goback"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/title_goback" />

        <TextView
            android:id="@+id/tv_chat_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:text="标题"/>
    </android.support.v7.widget.Toolbar>

    <ListView
        android:id="@+id/lv_chat"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#00000000"/>

    <cn.peng.pxun.ui.view.SmoothInputLayout
        android:id="@+id/sil_lyt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/translucent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:silInputView="@+id/et_chat_input"
        app:silInputPane="@+id/fl_chat_pane">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_smoothinputlayout_bar"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/bt_chat_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/translucent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_voice"
                android:src="@drawable/ic_smoothinputlayout_voice" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/et_chat_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:inputType="textMultiLine"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/bt_chat_speech"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/smoothinputlayout_voice"
                android:background="@drawable/bg_smoothinputlayout_voice"
                android:textColor="#ff959595"
                android:visibility="gone"
                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/bt_chat_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/translucent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_emoji"
                android:src="@drawable/ic_smoothinputlayout_emoji" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/bt_chat_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/translucent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_more"
                android:src="@drawable/ic_smoothinputlayout_more" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/bt_chat_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/translucent"
                android:padding="5dp"
                android:visibility="gone"
                android:contentDescription="@string/cd_smoothinputlayout_send"
                android:src="@drawable/ic_smoothinputlayout_send" />
        </LinearLayout>

        <FrameLayout
            android:id="@id/fl_chat_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/ll_chat_emoji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/merge_smoothinputlayout_emoji"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_chat_more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/merge_smoothinputlayout_more"/>

            </LinearLayout>
        </FrameLayout>

    </cn.peng.pxun.ui.view.SmoothInputLayout>
</LinearLayout>
